--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "editor.tabSize": 4,
     "editor.insertSpaces": true,
-    "editor.detectIndentation": false
+    "editor.detectIndentation": false,
+    "files.associations": {
+        "esp_lcd_touch_tt21100.h": "c",
+        "esp_lcd_touch.h": "c",
+        "esp-box.h": "c"
+    }
 } 
