--- a/platformio.ini
+++ b/platformio.ini
@@ -13,8 +13,16 @@ platform = espressif32
 board = esp32s3box
 framework = espidf
 
-lib_deps =
-  lvgl
+;lib_deps =
+;  lvgl@9.2.2
+;  https://github.com/lvgl/lv_port_esp32.git
 
-build_flags =
-  -DLV_COLOR_16_SWAP=0
+;esp_lvgl_port
+  
+;build_flags =
+;  -DLV_CONF_SKIP
+;  -DLV_CONF_INCLUDE_SIMPLE
+
+;build_flags =
+;   -D LV_COLOR_16_SWAP=0
+
