--- a/platformio.ini
+++ b/platformio.ini
@@ -1,28 +1,11 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
+
 
 [env:esp32s3box]
 platform = espressif32
 board = esp32s3box
 framework = espidf
 
+; Note: dependencies to esp-idf components are in src/idf_component.yml
 ;lib_deps =
-;  lvgl@9.2.2
-;  https://github.com/lvgl/lv_port_esp32.git
-
-;esp_lvgl_port
   
 ;build_flags =
-;  -DLV_CONF_SKIP
-;  -DLV_CONF_INCLUDE_SIMPLE
-
-;build_flags =
-;   -D LV_COLOR_16_SWAP=0
-
