add version info to settings screen, fixed touch driver & some cleanup

--- a/platformio.ini
+++ b/platformio.ini
@@ -4,6 +4,8 @@
 platform = espressif32
 board = esp32s3box
 framework = espidf
+extra_scripts = 
+    pre:git_firmware_version.py
 
 ; Note: dependencies to esp-idf components are in src/idf_component.yml
 ;lib_deps =
