--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,8 @@
 
 
-[env:esp32s3box]
+[env:esp32-2432S024C]
 platform = espressif32
-board = esp32s3box
+board = esp32-2432S024C
 framework = espidf
 extra_scripts = 
     pre:git_firmware_version.py
@@ -10,4 +10,5 @@ extra_scripts =
 ; Note: dependencies to esp-idf components are in src/idf_component.yml
 ;lib_deps =
   
-;build_flags =
+build_flags =
+    -D LV_COLOR_16_SWAP=1
