--- a/src/bsp/CMakeLists.txt
+++ b/src/bsp/CMakeLists.txt
@@ -1,8 +1,4 @@
 SET(SOURCES 
-    touch-CST328.c
-    ST7789T.c
-    PCF85063.c
-    waveshare-esp32s3-touch2.8.bsp.c)
+    cyd-esp32-2432S024C.bsp.c)
     
 add_library(bsp ${SOURCES})
-
