--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,15 @@
+file(GLOB_RECURSE SRC_UI ${CMAKE_CURRENT_SOURCE_DIR}/ui/*.c)
+file(GLOB_RECURSE SRC_BSP ${CMAKE_CURRENT_SOURCE_DIR}/bsp/cyd-esp32-2432S024C.bsp.c)
 
-file(GLOB_RECURSE SRC_UI ${CMAKE_SOURCE_DIR} "ui/*.c")
-file(GLOB_RECURSE SRC_BSP ${CMAKE_SOURCE_DIR} "bsp/*.c")
-
-idf_component_register(SRCS 
-    "main.c" 
-    "mill.c" 
-    "settings.c" 
-    ${SRC_UI}
-    ${SRC_BSP}
-    INCLUDE_DIRS "." "ui" "bsp")
+idf_component_register(
+    SRCS 
+        "main.c" 
+        "mill.c" 
+        "settings.c" 
+        ${SRC_UI}
+        ${SRC_BSP}
+    INCLUDE_DIRS 
+        "."
+        "ui" 
+        "bsp"
+)
