--- a/src/idf_component.yml
+++ b/src/idf_component.yml
@@ -1,9 +1,11 @@
 description: ESPGrind
 
 targets:
-    - esp32s3
+    - esp32
 
 dependencies:
   idf: '>=5'
   espressif/esp_lcd_touch: '^1.1'
   espressif/esp_lvgl_port: '^2.0'
+  espressif/esp_lcd_ili9341: '^2.0'
+  espressif/esp_lcd_touch_cst816s: '^1.0'
